# 1dHeat

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
.cmake/api/v1/reply/: cache-v2-2b577d9fa2a3dbf54c1b.json  cmakeFiles-v1-9acea2542166cfc8f328.json  codemodel-v2-079544e5f23d80d1b811.json  codemodel-v2-0bd68979dbd5593bc35d.json  index-2024-02-13T07-41-52-0421.json  index-2024-02-14T13-40-22-0006.json  target-tests-Debug-b289f099ab8d3e87a695.json  target-tests-Debug-e66129dc72432d5d20ed.json
src/: boundary_cond.cpp  boundary_cond.h  common.cpp  common.h  data_base.cpp  data_base.h  flow.cpp  flow.h  fuel.cpp  fuel.h  handler.h  ini_data.h  log_duration.h  logger.h  main.cpp  main_base.cpp  material.cpp  material.h  mesh.cpp  mesh.h  mesh_tests.h  solver.cpp  solver.h  test_inidata.h  test_mat.h  test_mesh.h  test_solve.h  tests.cpp
